<resources>
    <string name="app_name">MerakiAPP</string>
    <string name="navigation_drawer_open">Cajón de navegación abierto</string>
    <string name="navigation_drawer_close">Cerrar cajón de navegación</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Encabezado de navegación</string>
    <string name="action_help">Ayuda</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_acerca">Acerca de nosotros</string>
    <string name="menu_principal">Inicio</string>
    <string name="jugar">Jugar</string>
    <string name="menu_salir">Salir de la Aplicación</string>
    <string name="explorador">Modo Explorador</string>
    <string name="libre">Modo libre</string>
    <string name="verresultado">Ver resultado</string>
    <string name="finalizar">Finalizar</string>
    <string name="volveralaexplicacion">Volver a la explicación</string>
    <string name="demo">Modo Demo</string>
    <string name="puzzle">Haz el puzzle</string>
    <string name="siguiente">Siguiente</string>
    <string name="volver">Volver</string>
    <string name="introducirsala">Introduzca un número de sala</string>
    <string name="faltanpiezas">Te faltan piezas</string>
    <string name="puzzleCompletado">Puzzle Completado</string>
    <string name="piezamalcolocada">Pieza mal colocada</string>
    <string name="comprobar">Comprobar</string>
    <string name="volveraescuchar">Volver a escuchar</string>
    <string name="distancia">Estás lejos, acercate almenos unos 50 metros del punto</string>
    <string name="FQ">Preguntas Frecuentes</string>
    <string name="titulo_explicacion">Explicación</string>
    <string name="pescado_ahumado">Pescado ahumado</string>
    <string name="pescado_fresco">Pescado fresco</string>
    <string name="marisco">Marisco</string>
    <string name="pescado_precocinado">Pescado precocinado</string>
    <string name="pescado_conservas">Pescado en conservas</string>
    <string name="ola">Ola</string>
    <string name="olatu">Olatu</string>
    <string name="wave">Wave</string>
    <string name="onde">Onde</string>
    <string name="welle">Welle</string>
    <string name="onda">Onda</string>
    <string name="ingles">Inglés</string>
    <string name="castellano">Castellano</string>
    <string name="aleman">Alemán</string>
    <string name="frances">Francés</string>
    <string name="euskera">Euskera</string>
    <string name="italiano">Italiano</string>
    <string name="pregunta_test_1">¿Cuántas escaleras hay que subir para llegar a la ermita?</string>
    <string name="pregunta_test_2">¿Cuántas veces hay que tocar la campana de la ermita para tener buena suerte?</string>
    <string name="pregunta_test_3">¿En qué provincia se sitúa el islote de San Juan de Gaztelugatxe?</string>
    <string name="pregunta_test_4">¿Qué serie internacional se ha grabado en San Juan de Gaztelugatxe?</string>
    <string name="pregunta_puerta_san_juan">¿Cuántas puertas había en la muralla de Bermeo?</string>
    <string name="introduce_respuesta_puerta_san_juan">Introduce aquí tu respuesta</string>
    <string name="seleccionUsuario">Agregue un usuario para poder jugar haciendo click en el botón de la esquina</string>
    <string name="imagen">Inserte una imagen haciendo click en la imagen de abajo. Se abrirá la galería.</string>
    <string name="nombreUsuarioError">Inserte el nombre de usuario</string>
    <string name="ayuda">Ayuda</string>
    <string name="Buscarjugador">Buscar</string>
    <string name="pescado_congelado">Pescado congelado</string>
    <string name="buscar">Buscando jugador</string>
    <string name="tituloExplicacion">INFO</string>
    <string name="tituloJuegos">OBJETIVO DEL JUEGO</string>
    <string name="tituloVideo">VIDEO</string>
    <string name="tituloFinal">BIEN HECHO</string>
    <string name="tituloDialogFallo">VUELVE A INTENTARLO</string>
    <string name="tituloRotarPantalla">INFO</string>
    <string name="permisoDenegado">PERMISOS NO ACEPTADOS</string>
    <string name="tituloMapa">MAPA INTERACTIVO</string>
    <string name="errorUbicacion">Activa la ubicación</string>
    <string name="mensajeInicio">Meraki es una aplicación que te permite disfrutar de una serie de juegos, mientrás exploras el pueblo de Bermeo.\n\nEn el Modo Explorador, puedes completar los juegos solo cuando estás en cada una de las ubicaciones que aparecen en el mapa.\n(Uso obligatorio del GPS)\n\nEn el Modo Libre, puedes acceder a todos los juegos desde el principio y no necesitas activar el GPS.</string>
    <string name="mensajePermisos">Por favor, acepte los permisos de ubicación para acceder a la siguiente pantalla.</string>
    <string name="mensajeExplicacion">Lee y/o escucha atentamente la explicación. Te servirá de ayuda para completar correctamente el juego.</string>
    <string name="mensajeFeriaPescado">Une las imágenes con sus nombres correspondientes.\nPara unir dichos elementos, pulsa los botones circulares.</string>
    <string name="mensajeBadatoz">Rellena el puzzle con las piezas disponibles. \nPara arrastrar una pieza, mantén pulsado unos segundos sobre ella.</string>
    <string name="mensajeGaztelugatxe">Selecciona las respuestas correctas.</string>
    <string name="mensajeOlatua">Une los idiomas con sus palabras correspondientes.\nPara unir dichos elementos, pulsa los botones circulares.</string>
    <string name="mensajePuertaSanJuan">Introduce la respuesta correcta.</string>
    <string name="mensajeSopaLetras">Busca las 7 palabras en la sopa de letras.</string>
    <string name="mensajeVideoFeriaPescado">Video sobre la Feria del Pescado.</string>
    <string name="mensajeXixili">Rellena los huecos del párrafo con las frases correctas. \nPara arrastrar una frase, mantén pulsado unos segundos sobre ella.</string>
    <string name="mensajeFinal">Has completado correctamente todas las actividades.</string>
    <string name="mensajeDialogFallo">El resultado del juego es incorrecto.</string>
    <string name="mensajeAceptar">Aceptar</string>
    <string name="mensajeSeleccionarUsuario">Selecciona un usuario, pulsando el botón JUGAR que se encuentra en la parte derecha.\nSi no hay ningún usuario o quieres añadir más, pulsa el botón inferior derecho.</string>
    <string name="rotacionActivada">La rotación del dispositivo está activada.</string>
    <string name="rotacionDesactivada">La rotación del dispositivo está desactivada.</string>
    <string name="mensajeMapa">Modo Explorador: Para acceder a un juego, acércate lo máximo posible a dicha ubicación y pulsa el botón JUGAR. \n \nModo Libre: Pulsa únicamente las ubicaciones para acceder a sus respectivos juegos.</string>
    <string name="texto_upv">Kaixo! Somos un grupo de 3° de educación primaria trilingüe de la UPV/EHU y hemos diseñado esta unidad didáctica sobre una excursión a Bermeo. \nPara nosotros es muy importante sacar al alumnado del aula para que aprendan de una forma más lúdica y divertida.</string>
    <string name="texto_grupo3">Aplicación desarrollada por el equipo GRUPO 3 de la empresa MIME, perteneciente al centro CIFP TXURDINAGA LHII. \nIntegrantes del GRUPO 3: \n - Iker Martín \n - Mateo Vargas \n - Endika Villafruela \n - Markel Kareaga</string>
    <string name="texto_copyright">Copyright @ 2022 - 2023 Meraki App. - All Rights Reserved.</string>
    <string name="foto">No se ha sacado la foto</string>
    <string name="galeria">No se ha seleccionado la foto</string>
    <string name="numerosala">Inserte un numero para la sala</string>
    <string name="ganar">Has ganado</string>
    <string name="perder">Has perdido</string>
    <string name="pregunta1">¿Qué es Meraki?</string>
    <string name="pregunta2">¿Qué es el Modo Explorador?</string>
    <string name="pregunta3">¿Qué es el Modo Libre?</string>
    <string name="respuesta1">Meraki es una aplicación que te permite disfrutar de una serie de juegos, mientrás exploras el pueblo de Bermeo.</string>
    <string name="respuesta2">En el Modo Explorador, puedes acceder a cada juego solo si estás posicionado en su correspondiente ubicación, la cual se indica en el mapa.</string>
    <string name="respuesta3">En el Modo Libre, puedes acceder a todos los juegos desde el principio, sin necesidad de estar posicionado en cada una de sus correspondientes ubicaciones.</string>
    <string name="verFinal">Ver final</string>
    <string name="chat">Chat</string>
    <string name="intoduce_nombre">Introduce tu nombre</string>
    <string name="selecciona_perfil">Selecciona tu perfil</string>
    <string name="alumno">Alumno</string>
    <string name="profesor">Profesor</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="errorSala">Inserte una sala.</string>
    <string name="sala">Sala</string>
    <string name="errorEnviarMensaje">Rellena el campo para poder enviar un mensaje.</string>
    <string name="infoBorrarMensajes">AVISO: Todos los mensajes se borran cada 24 horas.</string>
    <string name="errorLoginChat">ERROR: Introduzca todos los datos necesarios.</string>
</resources>