<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_acerca"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_acerca" />

        <item
            android:id="@+id/nav_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/action_help" />

    </group>
    <item
        android:id="@+id/nav_inicio"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/menu_principal" />
    <item
        android:id="@+id/nav_salida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/cerrar"
        android:title="@string/menu_salir" />

</menu>