<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityGaztelugatxe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".juegos.GaztelugatxeActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="7dp">

    <ImageView
        android:id="@+id/gifAplausos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/aplausos" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="377dp"
        android:layout_height="504dp"
        android:layout_marginTop="35dp"
        android:background="#B2FFFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055">

        <RadioGroup
            android:id="@+id/gp3"
            android:layout_width="168dp"
            android:layout_height="216dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gp1"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_test_3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gipuzkoa"
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="33dp" />

            <RadioButton
                android:id="@+id/rb8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bizkaia "
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="81dp" />

            <RadioButton
                android:id="@+id/rb9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Araba"
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="129dp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/gp2"
            android:layout_width="154dp"
            android:layout_height="224dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_test_2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="222dp" />

            <RadioButton
                android:id="@+id/rb5"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="2"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="270dp" />

            <RadioButton
                android:id="@+id/rb6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="318dp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/gp1"
            android:layout_width="153dp"
            android:layout_height="211dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_test_1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="241 " />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="300 "
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="81dp" />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="157"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="129dp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/gp4"
            android:layout_width="169dp"
            android:layout_height="224dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gp2">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_test_4"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Agente 007"
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="222dp" />

            <RadioButton
                android:id="@+id/rb11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Juego de tronos"
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="270dp" />

            <RadioButton
                android:id="@+id/rb12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Los pitufos"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="318dp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btnVolverGaztelugatxe"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/estilo_botones_volver"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"/>

    <ImageButton
        android:id="@+id/btnComprobarGaztelugatxe"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/estilo_botones_resultado"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />

    <ImageButton
        android:id="@+id/btnFinalizarGaztelugatxe"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/estilo_botones_finalizar"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnInfoPantallaGaztelugatxe"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/estilo_botones_superiores"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_rotacion_bloqueada"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnAyudaGaztelugatxe"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/estilo_botones_superiores"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/btnInfoPantallaGaztelugatxe"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_ayuda"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>